# aruco_mapping2

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/: usb_cam.yaml
docs/: 开发环境搭建.md  软件使用说明.md
launch/: calibration.launch  location.launch  mapping.launch
rviz/: aruco_local.rviz  aruco_map_raw.rviz
scripts/: ERR_LOG.txt  TimeStat.ipynb  build_aruco_map_from_log.py  camera_pose_optimization.py  collect_aruco_data.py  draw_aruco_map.py  graph.py  test_graph.py  test_mapping.py  test_path.py  test_pykdl.py  time_log.txt
